# shuki

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  README.md
example/: CMakeLists.txt  main.cpp
include/: Shuki.h  ShukiApp.h  ShukiCamera.h  ShukiMath.h  ShukiModel.h  ShukiShader.h  ShukiTechnique.h  ShukiTexture.h  callbacks_impl.h  general_utils.h  ogl_basic.h  ogl_common.h  shencpp.cpp  skybox.hpp  vmath.h
lib/: assimp-vc140-mt.lib
shaders/: SSR1.fs  SSR1.vs  SSR2.fs  SSR2.vs  blueshader.fs  blueshader.vs  fusion.fs  shader.fs  shader.vs  shaderkernel.fs
source/: ShukiCamera.cpp  ShukiModel.cpp  ShukiShader.cpp  ShukiTechnique.cpp  ShukiTexture.cpp  skybox.hpp
