project(example)
set(SRC_FILE ./main.cpp)
include_directories(${CMAKE_SOURCE_DIR}/include)
add_executable(example ${SRC_FILE})
target_link_libraries(example freeglut)
target_link_libraries(example glew32)
target_link_libraries(example assimp)
target_link_libraries(example libshuki)
target_link_libraries(example CORE_DB_Magick++_)